[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/sounds/sfx/_pa/burst/burst.wav" type="AudioStream" id=1]
[ext_resource path="res://assets/sounds/sfx/hit_stray_v2.wav" type="AudioStream" id=2]
[ext_resource path="res://common/SpriteShadow.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/textures/atlas_arena_objects.png" type="Texture" id=4]
[ext_resource path="res://game/arena/bricks/BrickBouncer.gd" type="Script" id=5]
[ext_resource path="res://assets/sounds/sfx/_pa/burst/burst_uncocking.wav" type="AudioStream" id=6]

[sub_resource type="PhysicsMaterial" id=11]
bounce = 1.0

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 4, 4 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 8, 8 )

[sub_resource type="AudioStreamRandomPitch" id=8]
audio_stream = ExtResource( 2 )

[sub_resource type="AudioStreamRandomPitch" id=9]
audio_stream = ExtResource( 1 )
random_pitch = 1.05

[sub_resource type="OccluderPolygon2D" id=10]
polygon = PoolVector2Array( -3, 3, -3, -3, 3, -3, 3, 3 )

[node name="BouncerBrick" type="StaticBody2D"]
physics_material_override = SubResource( 11 )
script = ExtResource( 5 )

[node name="BrickShadow" parent="." instance=ExtResource( 3 )]

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 32, 0, 8, 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="DetectArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectArea"]
shape = SubResource( 7 )

[node name="Sounds" type="Node" parent="."]

[node name="HitBullet" type="AudioStreamPlayer" parent="Sounds"]
stream = SubResource( 8 )
volume_db = -10.0
pitch_scale = 0.9
bus = "GameSfx"

[node name="HitMisile" type="AudioStreamPlayer" parent="Sounds"]
stream = SubResource( 9 )
volume_db = -10.0
bus = "GameSfx"

[node name="DeNitro" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 6 )
volume_db = -15.0
bus = "GameSfx"

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 10 )

[connection signal="body_entered" from="DetectArea" to="." method="_on_DetectArea_body_entered"]
[connection signal="body_exited" from="DetectArea" to="." method="_on_DetectArea_body_exited"]
